--- a/MapApp/app/src/main/res/values/strings.xml
+++ b/MapApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MapApp</string>
     <string name="title_activity_maps">Map</string>
+    <string name="map_permission_text_1">To use the map features, just give us the permission..</string>
+    <string name="turn_on">Turn on</string>
 </resources>
